--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,21 @@ authors = [
 
 [tool.poetry.dependencies]
 python = ">=3.13.0"
-pyblinky = "^4.0.0"
+pyblinky = "^4.1.0"
 broadlink = "^0.19.0"
 fastapi = {extras = ["all"], version = "^0.115.5"}
+
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.13.0"
+flake8 = "^5.0.4"
+flake8-docstrings = "^1.6.0"
+flake8-import-order = "^0.18.1"
+flake8-import-single = "^0.1.5"
+flake8-quotes = "^3.3.1"
+yamllint = "^1.35.1"
+
+[[tool.mypy.overrides]]
+module = [
+    "broadlink"
+]
+ignore_missing_imports = true
