--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ flake8-import-single = "^0.1.5"
 flake8-quotes = "^3.3.1"
 yamllint = "^1.35.1"
 
+[tool.mypy]
+disallow_untyped_defs = true
+
 [[tool.mypy.overrides]]
 module = [
     "broadlink"
