--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ authors = [
 python = ">=3.13.0"
 pyblinky = "^4.1.0"
 broadlink = "^0.19.0"
+sentry-sdk = "^2.44.0"
 fastapi = {extras = ["all"], version = "^0.121.0"}
 
 [tool.poetry.group.dev.dependencies]
