configure sentry on deploy

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
     env_file:
       - path: ./.env
         required: false
+      - path: ./.sentry
+        required: false
     volumes:
       - ./logs:/tmp/logs
     restart: always
