--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
     ports:
       - "80:5000"
     environment:
+      - ENVIRONMENT=prod
       - NUM_WORKERS=6
     env_file:
       - path: ./.env
@@ -27,9 +28,13 @@ services:
     ports:
       - "1986:5000"
     environment:
+      - ENVIRONMENT=dev
       - AUTO_RELOAD=true
       - STATIC_CACHE_TIME=0
       - NUM_WORKERS=1
+    env_file:
+      - path: ./.sentry
+        required: false
     volumes:
       - ./src:/var/app/src
       - ./static:/var/app/static
